force-app/main/default/objects/Error_Signature__c/Error_Signature__c.object-meta.xml
<CustomObject>
    <label>Error Signature</label>
    <pluralLabel>Error Signatures</pluralLabel>
    <description>One record per unique normalized error fingerprint. Owns dedup state, the Agentforce spend ledger, the case mapping, and the diagnosis output. The Fingerprint Hash field is the unique external id that makes "diagnose at most once per unique fingerprint" a database property.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Error Signature Number</label>
        <type>AutoNumber</type>
        <displayFormat>SIG-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>