force-app/main/default/objects/Error_Signature__c/fields/Agent_Invocation_Count__c.field-meta.xml
<CustomField>
    <fullName>Agent_Invocation_Count__c</fullName>
    <label>Agent Invocation Count</label>
    <description>How many times the Agentforce agent has been invoked for this signature. The auditable spend ledger; the storm-simulation test asserts this equals the number of unique signatures, not total events.</description>
    <inlineHelpText>Number of Agentforce diagnoses run for this signature (credit-spend ledger).</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>