force-app/main/default/objects/Error_Signature__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <description>The failing Apex class for this signature, copied from the representative event. The entry point the agent uses for scoped source retrieval.</description>
    <inlineHelpText>The Apex class associated with this signature.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>