force-app/main/default/objects/Error_Signature__c/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <label>Apex Method</label>
    <description>The failing method for this signature, copied from the representative event. Part of the fingerprint key (line/column excluded).</description>
    <inlineHelpText>The method associated with this signature.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>