force-app/main/default/objects/Error_Signature__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <description>The currently mapped support case for this signature. New fingerprints create a case; recurring open fingerprints map back to it; recurrence after close creates a new linked case.</description>
    <inlineHelpText>The support case currently tracking this error signature.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Error Signatures</relationshipLabel>
    <relationshipName>Error_Signatures</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>