force-app/main/default/objects/Error_Signature__c/fields/Diagnosis_Status__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Status__c</fullName>
    <label>Diagnosis Status</label>
    <description>State of the agent diagnosis for this signature. The spend guard: only signatures in None (and outside the cooldown) are eligible to be enqueued for diagnosis.</description>
    <inlineHelpText>Whether this signature has been queued, diagnosed, or failed diagnosis.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Diagnosing</fullName>
            </value>
            <value>
                <fullName>Diagnosed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>