force-app/main/default/objects/Error_Signature__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <description>The exception class for this signature (e.g. System.NullPointerException). Part of the fingerprint key and useful context for the agent.</description>
    <inlineHelpText>The exception type associated with this signature.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>