force-app/main/default/objects/Error_Signature__c/fields/Faulting_Element__c.field-meta.xml
<CustomField>
    <fullName>Faulting_Element__c</fullName>
    <label>Faulting Element</label>
    <description>The flow element that faulted for this signature. Part of the Flow fingerprint key. Populated only for Flow-sourced signatures.</description>
    <inlineHelpText>The flow element associated with this signature (Flow source only).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>