force-app/main/default/objects/Error_Signature__c/fields/First_Seen__c.field-meta.xml
<CustomField>
    <fullName>First_Seen__c</fullName>
    <label>First Seen</label>
    <description>Timestamp this fingerprint was first observed. Set once when the signature is created.</description>
    <inlineHelpText>When this error signature was first seen.</inlineHelpText>
    <type>DateTime</type>
</CustomField>