force-app/main/default/objects/Error_Signature__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <description>The API name of the failing flow for this signature. Part of the Flow fingerprint key. Populated only for Flow-sourced signatures.</description>
    <inlineHelpText>The flow API name associated with this signature (Flow source only).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>