force-app/main/default/objects/Error_Signature__c/fields/Last_Diagnosed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Diagnosed_At__c</fullName>
    <label>Last Diagnosed At</label>
    <description>Timestamp of the most recent agent diagnosis. Combined with the configured cooldown, this enforces "at most once per unique fingerprint per window" and suppresses re-diagnosis of recurrences.</description>
    <inlineHelpText>When the agent last diagnosed this signature.</inlineHelpText>
    <type>DateTime</type>
</CustomField>