force-app/main/default/objects/Error_Signature__c/fields/Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen__c</fullName>
    <label>Last Seen</label>
    <description>Timestamp this fingerprint was most recently observed. Updated by the dedup batch each window the signature recurs.</description>
    <inlineHelpText>When this error signature was most recently seen.</inlineHelpText>
    <type>DateTime</type>
</CustomField>