force-app/main/default/objects/Error_Signature__c/fields/Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Message_Template__c</fullName>
    <label>Message Template</label>
    <description>The normalized message snippet (volatile tokens stripped) that, with class/method/type, produced this fingerprint. Stored for human readability and agent grounding.</description>
    <inlineHelpText>The normalized error message that defines this signature.</inlineHelpText>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>