force-app/main/default/objects/Error_Signature__c/fields/Occurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Count__c</fullName>
    <label>Occurrence Count</label>
    <description>Running total of events deduplicated onto this signature. Maintained in Apex by the dedup batch (the Event-to-Signature relationship is a Lookup, so a roll-up summary is not available).</description>
    <inlineHelpText>How many error events have matched this signature.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>