force-app/main/default/objects/Error_Signature__c/fields/Raw_Sample__c.field-meta.xml
<CustomField>
    <fullName>Raw_Sample__c</fullName>
    <label>Raw Sample</label>
    <description>Verbatim raw payload of the representative event for this fingerprint, retained so the diagnosis agent can read the original notification even when structured parsing degraded. Captured once at signature creation.</description>
    <inlineHelpText>The original error notification text the agent can read directly, especially when parsing was degraded.</inlineHelpText>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>