force-app/main/default/objects/Error_Signature__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <description>The agent's recommended fix for this signature. Copied onto the mapped case alongside the root cause.</description>
    <inlineHelpText>The recommended fix for this error, produced by the agent.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>