force-app/main/default/objects/Error_Signature__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <description>The agent's grounded root-cause analysis for this signature. Copied onto the mapped case.</description>
    <inlineHelpText>The diagnosed root cause of this error, produced by the agent.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>