force-app/main/default/objects/Error_Signature__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>The feed that produced the errors behind this signature. Determines how the agent grounds its diagnosis (Apex source vs Flow metadata).</description>
    <inlineHelpText>The source system for this signature (Apex, Flow, or Platform Event).</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>PlatformEvent</fullName>
                <label>Platform Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>